@@ -1,0 +1,19 @@
+from zope.publisher.browser import BrowserView
+
+class DocumentView(BrowserView):
+    pass
+
+class EventView(BrowserView):
+    pass
+
+class FileView(BrowserView):
+    pass
+
+class ImageView(BrowserView):
+    pass
+
+class LinkView(BrowserView):
+    pass
+
+class NewsItemView(BrowserView):
+    pass
