@@ -90,7 +90,7 @@
                                   tal:attributes="class string:$kss_class dtstart;
                                                   title python:context.start().ISO8601()">
                                   <span metal:define-slot="inside" 
-                                        tal:replace="python:test(ampm, context.start().AMPMMinutes(), context.start().TimeMinutes())">Start Time</span>
+                                        tal:replace="python: ampm and context.start().AMPMMinutes() or context.start().TimeMinutes()">Start Time</span>
                             </abbr>
                             <span i18n:translate="event_to">to</span>
                             <abbr metal:define-macro="enddatesame-field-view"
@@ -101,14 +101,10 @@
                                   tal:attributes="class string:$kss_class dtend;
                                                   title python:context.end().ISO8601()">
 
-
-
                                   <span metal:define-slot="inside" 
-                                        tal:replace="python:test(ampm, context.end().AMPMMinutes(), context.end().TimeMinutes())">End Time</span>
+                                        tal:replace="python:ampm and context.end().AMPMMinutes() or context.end().TimeMinutes()">End Time</span>
                             </abbr>
-                            
-                            <!-- <span tal:replace="python:test(ampm, context.end().AMPMMinutes(), context.end().TimeMinutes())">End Time</span> -->
-                            
+
                         </tal:sameday>
 
                     </td>
