@@ -2,8 +2,7 @@
     xmlns="http://namespaces.zope.org/zope"
     xmlns:five="http://namespaces.zope.org/five">
 
-  <include file="browser.zcml"/>
-
+  <include package=".browser" />
   <include package=".exportimport" />
   <include package="plone.i18n.normalizer" />
 
