@@ -1,2 +1,0 @@
-[default]
-title=View News Item
